--- a/index.html
+++ b/index.html
@@ -13,15 +13,11 @@
             <span id="day-test"></span>
         </h1>
 
-        <img
-            src="WhatsApp Image 2024-12-05 at 20.12.34.jpeg"
-            alt=""
-            class="hero-img"
-        />
+        <div class="img-container">
+            <img src="wpp01.jpeg" alt="" class="hero-img" />
+        </div>
 
-        <h3 class="citacao">
-            “Sometimes the smallest decisions can change your life forever.”
-        </h3>
+        <h3 class="citacao"></h3>
         <script src="script.js"></script>
     </body>
 </html>
