--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
             <img src="wpp01.jpeg" alt="" class="hero-img" />
         </div>
 
+        <audio autoplay loop>
+            <source
+                src="/ANAVITÓRIA - Singular (Audio).mp3"
+                type="audio/mpeg"
+            />
+            Seu navegador não suporta o elemento de áudio.
+        </audio>
+
         <h3 class="citacao"></h3>
         <script src="script.js"></script>
     </body>
