--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
         </div>
 
         <audio autoplay loop id="musica">
-            <source
-                src="/ANAVITÓRIA - Singular (Audio).mp3"
-                type="audio/mpeg"
-            />
+            <source src="singular.mp3" type="audio/mpeg" />
             Seu navegador não suporta o elemento de áudio.
         </audio>
 
